--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
             text-decoration: none;
             box-shadow: 3px 3px 5px 0px black;
         }
-        .wrap > a:hover{
-            background-color: #f3f3f3;
+          .wrap > a:hover{
+            background-color: #f1f1f1;
+            color: #1e1846;
+            font-size: 16px;
         }
         .clean{
             margin-top: 30px;
